--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
+@import url("styles/header.css");
+
 :root {   
      --cor-de-fundo: #5a6e97; 
+     --branco: #FFFFFF;
 }
 
 body {    
     background-color: var(--cor-de-fundo);   
  }
 
-h1 {
-    background-color: rgb(228, 102, 102);
-}
